--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Pango.Desktop.Uwp.csproj
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Pango.Desktop.Uwp.csproj
@@ -27,21 +27,27 @@
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
 	  <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
+	  <NoWarn>CA1416;</NoWarn>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
 	  <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
+	  <NoWarn>CA1416;</NoWarn>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|arm64'">
 	  <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
+	  <NoWarn>CA1416;</NoWarn>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
 	  <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
+	  <NoWarn>CA1416;</NoWarn>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
 	  <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
+	  <NoWarn>CA1416;</NoWarn>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|arm64'">
 	  <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
+	  <NoWarn>CA1416;</NoWarn>
 	</PropertyGroup>
 	
 	<ItemGroup>
@@ -137,7 +143,13 @@
 		</Content>
 	</ItemGroup>
 	<ItemGroup>
+	  <None Remove="Dialogs\Views\PasswordDetailsDialog.xaml" />
 	  <None Remove="Resources\Styles\TextBoxStyles.xaml" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Page Update="Dialogs\Views\PasswordDetailsDialog.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </Page>
 	</ItemGroup>
 	<ItemGroup>
 	  <Page Update="Resources\Styles\TextBoxStyles.xaml">
