--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,7 +1,7 @@
 name: Bug report
 description: File a bug report
 title: "Bug title"
-labels: ["bug"]
+labels: ["bug", "need-to-sort"]
 body:
   - type: dropdown
     validations:
@@ -9,7 +9,8 @@ body:
     attributes:
       label: Which version of the app?
       options:
-        - "[beta]v.0.1"
+        - "v.0.1.2-alpha"
+        - "v.0.1.3-alpha"
   - type: textarea
     attributes:
       label: Description
