--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -1,7 +1,7 @@
 name: Feature request
 description: Suggest a sample or enhancement for the Pango secret keeper
 title: "Sample request title"
-labels: ["needs-triage"]
+labels: ["feature","needs-triage"]
 body:
   - type: dropdown
     validations:
@@ -17,7 +17,8 @@ body:
     attributes:
       label: Which version of the app?
       options:
-        - "[beta]v.0.1" 
+        - "v.0.1.2-alpha"
+        - "v.0.1.3-alpha"
   - type: textarea
     attributes:
       label: Description
