--- a/src/Core/Pango.Application/Pango.Application.csproj
+++ b/src/Core/Pango.Application/Pango.Application.csproj
@@ -12,6 +12,7 @@
 	  <PackageReference Include="Mapster" Version="7.3.0" />
 	  <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
 	  <PackageReference Include="MediatR" Version="12.1.1" />
+	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\Pango.Domain\Pango.Domain.csproj" />
