reafactoring: get rid of dependency between application and storage

--- a/src/Infrastructure/Pango.Infrastructure/Pango.Infrastructure.csproj
+++ b/src/Infrastructure/Pango.Infrastructure/Pango.Infrastructure.csproj
@@ -14,6 +14,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\Pango.Persistence.File\Pango.Persistence.File.csproj" />
 	  <ProjectReference Include="..\Pango.Persistence\Pango.Persistence.csproj" />
 	</ItemGroup>
 
