feat(change-password): implement an ability to change the current user's password
refs: #50

--- a/tests/Pango.Application.Tests/Pango.Application.Tests.csproj
+++ b/tests/Pango.Application.Tests/Pango.Application.Tests.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Core\Pango.Application\Pango.Application.csproj" />
+    <ProjectReference Include="..\..\src\Infrastructure\Pango.Persistence.File\Pango.Persistence.File.csproj" />
   </ItemGroup>
 
 </Project>
