feat(export&import): add a view for export and import of data
refs: #38

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Pango.Desktop.Uwp.csproj
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Pango.Desktop.Uwp.csproj
@@ -153,6 +153,12 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <None Remove="Dialogs\Views\ChangePasswordDialog.xaml" />
+	  <None Remove="Views\ExportImportView.xaml" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Page Update="Views\ExportImportView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </Page>
 	</ItemGroup>
 	<ItemGroup>
 	  <Page Update="Dialogs\Views\ChangePasswordDialog.xaml">
