--- a/src/Infrastructure/Pango.Persistence.File/Pango.Persistence.File.csproj
+++ b/src/Infrastructure/Pango.Persistence.File/Pango.Persistence.File.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.IO.Packaging" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Pango.Persistence\Pango.Persistence.csproj" />
   </ItemGroup>
 
