--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Pango.Desktop.Uwp.csproj
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Pango.Desktop.Uwp.csproj
@@ -153,7 +153,13 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <None Remove="Dialogs\Views\ChangePasswordDialog.xaml" />
+	  <None Remove="Dialogs\Views\ExportDialog.xaml" />
 	  <None Remove="Views\ExportImportView.xaml" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Page Update="Dialogs\Views\ExportDialog.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </Page>
 	</ItemGroup>
 	<ItemGroup>
 	  <Page Update="Views\ExportImportView.xaml">
