feat(import&export): display the export completion dialog once export is done
refs: #38

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Pango.Desktop.Uwp.csproj
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Pango.Desktop.Uwp.csproj
@@ -153,8 +153,14 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <None Remove="Dialogs\Views\ChangePasswordDialog.xaml" />
+	  <None Remove="Dialogs\Views\ExportCompletedDialog.xaml" />
 	  <None Remove="Dialogs\Views\ExportDialog.xaml" />
 	  <None Remove="Views\ExportImportView.xaml" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Page Update="Dialogs\Views\ExportCompletedDialog.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </Page>
 	</ItemGroup>
 	<ItemGroup>
 	  <Page Update="Dialogs\Views\ExportDialog.xaml">
