feat: implement the basic data importing flow
refs: #38

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Pango.Desktop.Uwp.csproj
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Pango.Desktop.Uwp.csproj
@@ -155,7 +155,13 @@
 	  <None Remove="Dialogs\Views\ChangePasswordDialog.xaml" />
 	  <None Remove="Dialogs\Views\ExportCompletedDialog.xaml" />
 	  <None Remove="Dialogs\Views\ExportDialog.xaml" />
+	  <None Remove="Dialogs\Views\ImportDialog.xaml" />
 	  <None Remove="Views\ExportImportView.xaml" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Page Update="Dialogs\Views\ImportDialog.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </Page>
 	</ItemGroup>
 	<ItemGroup>
 	  <Page Update="Dialogs\Views\ExportCompletedDialog.xaml">
