--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -11,6 +11,7 @@ body:
       options:
         - "v.0.1.2-alpha"
         - "v.0.1.3-alpha"
+        - "v.0.1.4-alpha"
   - type: textarea
     attributes:
       label: Description
