--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -19,6 +19,7 @@ body:
       options:
         - "v.0.1.2-alpha"
         - "v.0.1.3-alpha"
+        - "v.0.1.4-alpha"
   - type: textarea
     attributes:
       label: Description
